--- a/backend/backend_project/frontend/static/CSS/add_edit.css
+++ b/backend/backend_project/frontend/static/CSS/add_edit.css
@@ -173,7 +173,7 @@ form {
     transform: scale(1.02);
 }
 
-#id-validation,
+#isbn-validation,
 #book-cover-validation {
     margin: 1%;
     padding-left: 10px;
