--- a/backend/backend_project/frontend/templates/frontend/pages/add_edit.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/add_edit.html
@@ -80,6 +80,7 @@
                                     oninput="this.value = this.value.replace(/[^0-9]/g, '');"
                                     placeholder="Enter Book ISBN must be exactly 13 digit" minlength="13" maxlength="13"
                                     pattern="\d{13}" autocomplete="off" required>
+                                    <p id="isbn-validation" class="hide">This ISBN is already exists</p>
                             </div>
                             <div class="field">
                                 <div class="input-header">
