--- a/backend/backend_project/frontend/templates/frontend/pages/user_dashboard.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/user_dashboard.html
@@ -25,6 +25,11 @@
                             <i class="fas fa-user"></i>Profile</a></li>
                         <li><a href="#hero"><i class="fas fa-home"></i> Home</a></li>
                         <li><a href="{% url 'books' %}"><i class="fas fa-book"></i> Books</a></li>
+
+                <li><a href="{% url 'borrowed' %}"><i
+                            class="fas fa-bookmark"></i> My Borrows</a></li>                                                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+
+
           <li>
               <form action="{% url 'logout' %}" method="post">
               {% csrf_token %}
@@ -44,12 +49,17 @@
                     <i class="fas fa-user"></i>Profile</a></li>
                 <li><a href="#hero"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="{% url 'books' %}"><i class="fas fa-book"></i> Books</a></li>
-                <li>
-                    <form action="{% url 'logout' %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
-                    </form>
-                </li>
+
+                                <li><a href="{% url 'borrowed' %}"><i
+                            class="fas fa-bookmark"></i> My Borrows</a></li>                                                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+
+
+          <li>
+            g  <form action="{% url 'logout' %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+              </form>
+          </li>
         </div>
         <div class="overlay"></div>
 
@@ -153,7 +163,7 @@
                         <p>You don't have any favorite books yet.</p>
                         {% endfor %}
                     </div>
-                </div>                
+                </div>
 
                 <div class="borrowed-books">
                     <div class="section-header">
