--- a/backend/backend_project/frontend/static/CSS/admin_dashboard.css
+++ b/backend/backend_project/frontend/static/CSS/admin_dashboard.css
@@ -98,7 +98,7 @@ body {
     padding-top: 10px;
     overflow-y: auto;
     overflow-x: hidden;
-    height: fit-content;
+    max-height: 380px;
 }
 
 .formats-form .input-header {
@@ -151,7 +151,7 @@ body {
 
 .save-copies {
     background-color: var(--primary-color);
-    color: var(--font-primary);
+    color: whitesmoke;
     font-size: 16px;
     border: none;
     border-radius: 6px;
@@ -185,14 +185,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 10px;
+    margin-right: 15px;
     margin-left: 10px;
 }
 
 .profile-pic {
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     transition: all 0.3s ease;
 }
 
@@ -200,7 +200,11 @@ body {
     font-family: var(--font-primary);
     text-align: left;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 450;
+}
+
+#date {
+    font-size: 10px;
 }
 
 .close-btn {
