--- a/backend/backend_project/frontend/templates/frontend/index.html
+++ b/backend/backend_project/frontend/templates/frontend/index.html
@@ -174,7 +174,7 @@
     </footer>
 
     <!-- JavaScript Files -->
-    {% comment %} <script src="{% static 'Script/await.js' %}"></script>  {% endcomment %}
+    <script src="{% static 'Script/await.js' %}"></script>
     <script src="{% static 'Script/theme.js' %}"></script>
     <script src="{% static 'Script/header.js' %}"></script>
     <script src="{% static 'Script/footer.js' %}"></script>
